[MIG] account_direct_debit: Migration to 16.0
closes ingadhoc/enterprise-extensions#290

Signed-off-by: Juan Carreras <jc@adhoc.com.ar>

--- a/l10n_ar_account_direct_debit/views/account_direct_debit_mandate_views.xml
+++ b/l10n_ar_account_direct_debit/views/account_direct_debit_mandate_views.xml
@@ -6,6 +6,7 @@
         <field name="inherit_id" ref="account_direct_debit.account_direct_debit_mandate_form"/>
         <field name="arch" type="xml">
             <field name="description" position="after">
+                <field name="direct_debit_format" invisible="1"/>
                 <field name="credit_card_number" attrs="{'invisible': [('direct_debit_format', 'not in', ['visa_credito', 'master_credito', 'visa_debito'])]}"/>
                 <field name="commercial_partner_id" invisible="1"/>
                 <field name="partner_bank_id" attrs="{'invisible': [('direct_debit_format', 'not in', ['cbu_macro', 'cbu_galicia'])]}" domain="[('partner_id.commercial_partner_id', '=', commercial_partner_id)]" context="{'default_partner_id':partner_id, 'account.direct_debit.mandate': True}"/>
