--- a/account_direct_debit/views/account_direct_debit_mandate_views.xml
+++ b/account_direct_debit/views/account_direct_debit_mandate_views.xml
@@ -13,7 +13,7 @@
                     <button string="Back To Draft" type="object" name="action_to_draft" attrs="{'invisible':[('state','!=','closed')]}"/>
                 </header>
                 <sheet>
-                    <div class="oe_button_box" name="direct_debit_mandate_form_button_box">
+                    <div class="oe_button_box" name="button_box">
                         <button type="object" name="action_view_paid_invoices" icon="fa-pencil-square-o" class="oe_stat_button">
                             <span><field name="paid_invoices_nber" widget="statinfo" string="Invoices Paid" help="Invoices paid with this mandate."/></span>
                         </button>
@@ -21,6 +21,7 @@
                     <group>
                         <group>
                             <field name="partner_id"/>
+                            <field name="company_id" invisible="1"/>
                             <field name="journal_id" domain="[('type', '=', 'bank'), ('company_id', '=', company_id), ('inbound_payment_method_line_ids.payment_method_id.code', '=', 'dd')]" required="1"/>
                         </group>
                         <group>
@@ -74,7 +75,7 @@
     </record>
 
     <menuitem id="direct_debit_customer_mandates_menu"
-        name="Debit Debit Mandates"
+        name="Direct Debit Mandates"
         parent="account.menu_finance_receivables"
         action="account_direct_debit_mandate_tree_act"
         sequence="50"/>
