[MIG] account_online_sync_ar: Migration to 16.0
closes ingadhoc/enterprise-extensions#298

Related: ingadhoc/odoo-saas-adhoc#355
Signed-off-by: Katherine Zaoral <kz@adhoc.com.ar>

--- a/account_online_sync_ar/views/account_journal_views.xml
+++ b/account_online_sync_ar/views/account_journal_views.xml
@@ -13,16 +13,16 @@
             </field>
 
             <!-- Mostrar fecha ultima sincronizacion con paybook -->
-            <span t-if="(record.account_online_account_id.value != '')" position="after">
+            <span t-if="(record.next_link_synchronization !== undefined)" position="after">
                 <br/>
-                <span groups="account.group_account_user" class="text-muted" t-if="(record.account_online_account_id.value != '')" t-att-title="record.paybook_last_transaction.value">
+                <span groups="account.group_account_user" class="text-muted" t-if="(record.next_link_synchronization !== undefined)" t-att-title="record.paybook_last_transaction.value">
                   Last: <t t-esc="record.paybook_last_transaction.value"/>
                   <br/>
                 </span>
             </span>
 
             <!-- Esconder Proxima sincronizacion si soy paybook, esta valor no importa y confunde, solo tiene sentido con saltedge -->
-            <span t-if="(record.account_online_account_id.value != '')" position="attributes">
+            <span t-if="(record.next_link_synchronization !== undefined)" position="attributes">
               <attribute name="t-if">account_online_provider_type != 'paybook' and (record.account_online_account_id.value != '')</attribute>
             </span>
 
