[IMP]sale_subscription_ux: v16 improvements
closes ingadhoc/enterprise-extensions#319

Signed-off-by: matiasperalta1 <mnp@adhoc.com.ar>

--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -18,4 +18,18 @@
         </field>
     </record>
 
+   <record model="ir.ui.view" id="sale_subscription_view_tree">
+        <field name="name">sale.subscription.view.tree.ux</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_subscription.sale_subscription_view_tree"/>
+        <field name="arch" type="xml">
+            <field name="client_order_ref" position="attributes">
+                <attribute name="optional">hide</attribute>
+            </field>
+            <field name="amount_untaxed" position="before">
+                <field name="recurring_monthly" string="MRR"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
