--- a/sale_subscription_variable_vals/views/sale_order_line_vals_formula_views.xml
+++ b/sale_subscription_variable_vals/views/sale_order_line_vals_formula_views.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-    <record id="view_sale_order_line_quantity_formula_tree" model="ir.ui.view">
-        <field name="name">sale.order.line.quantity.formula</field>
-        <field name="model">sale.order.line.quantity.formula</field>
+    <record id="view_sale_order_line_vals_formula_tree" model="ir.ui.view">
+        <field name="name">sale.order.line.vals_formula</field>
+        <field name="model">sale.order.line.vals_formula</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="name" />
@@ -11,9 +11,9 @@
         </field>
     </record>
 
-    <record id="view_sale_order_line_quantity_formula_form" model="ir.ui.view">
-        <field name="name">sale.order.line.quantity.formula</field>
-        <field name="model">sale.order.line.quantity.formula</field>
+    <record id="view_sale_order_line_vals_formula_form" model="ir.ui.view">
+        <field name="name">sale.order.line.vals_formula</field>
+        <field name="model">sale.order.line.vals_formula</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
