--- a/sale_subscription_variable_vals/views/sale_order_views.xml
+++ b/sale_subscription_variable_vals/views/sale_order_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/tree//field[@name='product_uom_qty']" position="before">
-                <field name="quantity_formula_id" help="asdas" decoration-info="temporal_type == 'subscription'" decoration-bf="(not display_type and invoice_status == 'to invoice')" attrs="{'column_invisible': [('parent.is_subscription', '=', False)]}" optional="show"/>
+                <field name="quantity_formula_id" help="asdas" decoration-info="temporal_type == 'subscription'" decoration-bf="(not display_type and invoice_status == 'to invoice')" attrs="{'column_invisible': [('parent.is_subscription', '=', False)]}" optional="show" context="{'sale_line_id': id}"/>
             </xpath>
         </field>
     </record>
