--- a/sale_subscription_ux/views/sale_subscription_template_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_template_views.xml
@@ -11,6 +11,7 @@
             </field>
             <field name="journal_id" position="after">
                 <field name="add_period_dates_to_description" attrs="{'invisible': [('is_subscription', '=', False)]}"/>
+                <field name="recurring_auto_post" attrs="{'invisible': [('is_subscription', '=', False)]}"/>
             </field>
         </field>
     </record>
