[IMP]sale_subscription_ux: views improvement
closes ingadhoc/enterprise-extensions#328

Signed-off-by: Juan José Scarafía <jjs@adhoc.com.ar>

--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -43,4 +43,15 @@
         </field>
     </record>
 
+    <record id="sale_subscription_order_view_form" model="ir.ui.view">
+        <field name="name">sale.subscription.order.form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_subscription.sale_subscription_order_view_form"/>
+        <field name="arch" type="xml">
+            <field name="sale_order_template_id" position="attributes">
+                <attribute name="attrs">{'invisible': ['|', ('subscription_management', '=', 'upsell'), ('state', 'in', ['sale', 'done']), ('is_subscription', '=', False)]}</attribute>
+            </field>
+        </field>
+    </record>
+
 </odoo>
