--- a/sale_subscription_ux/views/sale_subscription_template_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_template_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="sale_subscription.sale_subscription_template_view_form"/>
         <field name="arch" type="xml">
             <field name="journal_id" position="before">
-                <field name="dates_required" attrs="{'invisible': [('is_subscription', '=', False)]}"/>
+                <field name="dates_required" attrs="{'invisible': [('recurrence_id', '=', False)]}"/>
             </field>
             <field name="journal_id" position="after">
                 <field name="add_period_dates_to_description" attrs="{'invisible': [('is_subscription', '=', False)]}"/>
