[FIX] helpdesk_solutions: no create on tags
El no_create_edit es redundante si ya hay no_create
Por otro lado, en etiquetas queriamos que haya "no_create" (que tmb elimina el no_create_edit)

closes ingadhoc/enterprise-extensions#340

Signed-off-by: Juan José Scarafía <jjs@adhoc.com.ar>

--- a/helpdesk_solutions/views/helpdesk_solution_views.xml
+++ b/helpdesk_solutions/views/helpdesk_solution_views.xml
@@ -54,9 +54,9 @@
                         </h1>
                     </div>
                     <field name="active" invisible="1"/>
-                    <field name="tag_ids" widget="many2many_tags" placeholder="Tags..." options="{'color_field': 'color', 'no_create_edit': True}"/>
+                    <field name="tag_ids" widget="many2many_tags" placeholder="Tags..." options="{'color_field': 'color', 'no_create': True}"/>
                     <br/>
-                    <field name="faq_category_ids" widget="many2many_tags" placeholder="FAQ Categories..." options="{'color_field': 'color', 'no_create_edit': True, 'no_create': True}"/>
+                    <field name="faq_category_ids" widget="many2many_tags" placeholder="FAQ Categories..." options="{'color_field': 'color', 'no_create': True}"/>
                     <notebook>
                         <page string="Ticket Description">
                             <field name="ticket_description" placeholder="Add a ticket description..."/>
