--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -46,7 +46,7 @@
                 <attribute name="attrs">{'invisible':[('subscription_management', '=', 'upsell')]}</attribute>
             </field>
             <button name="action_update_prices" position="after">
-                <button name="action_update_prices" type="object" string="Update Prices" help="Recompute all prices based on this pricelist" class="btn-link mb-1 px-0" icon="fa-refresh" confirm="This will update all unit prices based on the currently set pricelist." attrs="{'invisible': ['|', ('is_subscription', '=', False), ('state', 'not in', ['sale', 'done'])]}"/>
+                <button name="action_update_subscription_prices" type="object" string="Update Prices" help="Recompute all prices based on this pricelist" class="btn-link mb-1 px-0" icon="fa-refresh" confirm="This will update all unit prices based on the currently set pricelist." attrs="{'invisible': ['|', ('is_subscription', '=', False), ('state', 'not in', ['sale', 'done'])]}"/>
             </button>
         </field>
     </record>
