--- a/sale_subscription_ux/views/sale_subscription_views.xml
+++ b/sale_subscription_ux/views/sale_subscription_views.xml
@@ -45,9 +45,13 @@
             <field name="sale_order_template_id" position="attributes">
                 <attribute name="attrs">{'invisible':[('subscription_management', '=', 'upsell')]}</attribute>
             </field>
-            <button name="action_update_prices" position="after">
-                <button name="action_update_subscription_prices" type="object" string="Update Recurring Prices" help="Recompute only recurring products' prices based on the subscription's pricelist" class="btn-link mb-1 px-0" icon="fa-refresh" confirm="This will update recurring products' prices based on the currently set pricelist." attrs="{'invisible': ['|', ('is_subscription', '=', False), ('state', 'not in', ['sale', 'done'])]}"/>
-            </button>
+            <xpath expr="//label[@for='pricelist_id']/.." position="inside">
+                <div class="o_cell o_wrap_label flex-grow-1 flex-sm-grow-0 w-100 text-break text-900">
+                </div>
+                <div class="o_cell o_wrap_input flex-grow-1 flex-sm-grow-0 text-break" style="width:100%">
+                    <button name="action_update_subscription_prices" type="object" string="Update Recurring Prices" help="Recompute only recurring products' prices based on the subscription's pricelist" class="btn-link mb-1 px-0" icon="fa-refresh" confirm="This will update recurring products' prices based on the currently set pricelist." attrs="{'invisible': ['|', ('is_subscription', '=', False), ('state', 'not in', ['sale', 'done'])]}"/>
+                </div>
+            </xpath>
         </field>
     </record>
 
